add session creator username to the footer, close #90

--- a/caravel/jinja_templates/footer.html
+++ b/caravel/jinja_templates/footer.html
@@ -21,9 +21,10 @@
 			</div>
 			<div class="center_footer">
 				<a href="http://code.databio.org/caravel/" target="_blank">Docs <i class="fa fa-book"></i></a>
+				<p>session created by: <code>{{ login }}</code></p>
 			</div>
 			<div class="right_footer">
-				© 2018 <a href="http://databio.org/" target="_new">Sheffield Computational Biology Lab</a> at the University of Virginia
+				© 2018 <a href="http://databio.org/" target="_new">Sheffield Computational Biology Lab</a>
 			</div>
 		</div>
 	</footer>
