use caravel congig in the summary index

--- a/caravel/jinja_templates/footer.html
+++ b/caravel/jinja_templates/footer.html
@@ -1,20 +1,18 @@
-	<hr class="featurette-divider">
-	<footer class="text-muted">
 		<div class="wrapper">
 			<div class="left_footer">
 				<table class="table-responsive">
 					<thead>
 						<tr>
-							<th scope="col">caravel</th>
-							<th scope="col">looper</th>
-							<th scope="col">Python</th>
+							<th scope="col" class="footer">caravel</th>
+							<th scope="col" class="footer">looper</th>
+							<th scope="col" class="footer">Python</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr>
-							<td scope="row"><a href="http://code.databio.org/caravel/" target="_new"><img src="{{ url_for('static',filename='caravel_icon.svg') }}" width="30" height="30" alt=""></a><code class="footer">{{caravel_version}}</code></td>
-							<td scope="row"><a href="https://looper.readthedocs.io/en/latest/" target="_new"><img src="{{ url_for('static',filename='logo_looper.svg') }}" width="30" height="30" alt=""></a><code class="footer">{{looper_version}}</code></td>
-							<td scope="row"><a href="https://www.python.org/" target="_new"><img src="{{ url_for('static',filename='python.svg') }}" width="30" height="30" alt=""></a><code class="footer"> {{python_version}}</code></td>
+							<td scope="row" class="footer"><a href="http://code.databio.org/caravel/" target="_new"><img src="../static/caravel_icon.svg" width="30" height="30" alt=""></a><code class="footer">{{caravel_version}}</code></td>
+							<td scope="row" class="footer"><a href="https://looper.readthedocs.io/en/latest/" target="_new"><img src="../static/logo_looper.svg" width="30" height="30" alt=""></a><code class="footer">{{looper_version}}</code></td>
+							<td scope="row" class="footer"><a href="https://www.python.org/" target="_new"><img src="../static/python.svg" width="30" height="30" alt=""></a><code class="footer"> {{python_version}}</code></td>
 						</tr>
 					</tbody>
 				</table>
@@ -24,7 +22,6 @@
 				<p>session created by: <code>{{ login }}</code></p>
 			</div>
 			<div class="right_footer">
-				© 2018 <a href="http://databio.org/" target="_new">Sheffield Computational Biology Lab</a>
+				&copy; 2018 <a href="http://databio.org/" target="_new">Sheffield Computational Biology Lab</a>
 			</div>
 		</div>
-	</footer>
