--- a/caravel/jinja_templates/template.html
+++ b/caravel/jinja_templates/template.html
@@ -37,5 +37,8 @@
 			</body>
 		</div>
 	</div>
-	{% include "footer.html" %}
+	<hr class="featurette-divider">
+	<footer class="text-muted">
+		{% include "footer.html" %}
+	</footer>
 </html>
