--- a/caravel/jinja_templates/navbar.html
+++ b/caravel/jinja_templates/navbar.html
@@ -3,7 +3,7 @@
 			<span class="navbar-toggler-icon"></span>
 		</button>
 		<a class="navbar-brand" href="/index">
-			<img src="../static/logo_caravel_dark.svg" width="180" height="60" alt="">
+			{% include "logo_caravel.html" %}
 		</a>
 		<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 			<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
