--- a/caravel/jinja_templates/compute_info.html
+++ b/caravel/jinja_templates/compute_info.html
@@ -1,8 +1,12 @@
-<h2>Selected compute package info:</h2>
 {% if active_settings is not none %}
-    {% for item in active_settings %} 
-        <p><b>{{ item }}: </b><code id="{{ item }}">{{ active_settings[item] }}</code></p>
-    {% endfor %}
+	<div class="card border-light mb-3" style="display:inline-block;">
+      <div class="card-header"><b>Selected compute package info</b></div>
+      <div class="card-body">
+			{% for item in active_settings %} 
+				<p>{{ item }}: <code id="{{ item }}">{{ active_settings[item] }}</code></p>
+			{% endfor %}
+      </div>
+    </div>
 {% else %}
 <p>Warning: <code>{{ msg }}</code></p>
 {% endif %}
