--- a/caravel/jinja_templates/index.html
+++ b/caravel/jinja_templates/index.html
@@ -28,7 +28,11 @@
 			<option value="{{ p }}">{{ p }}</option>
 		{% endfor %}
 	</select>
-	<button type="submit" class="btn btn-outline-dark ml-2">GO</button>
+	{% if reset_btn is not none %}
+		<button type="button" class="btn btn-outline-dark ml-2 disabled">GO (reset to proceed)</button>
+	{% else %}
+		<button type="submit" class="btn btn-outline-dark ml-2">GO</button>
+	{% endif %}
 </form>
 {% if reset_btn is not none %}
 	<div class="divider-vertical">
