add custom jinja filter and use it in the templates
for default slider value extraction from the type data

--- a/caravel/jinja_templates/options.html
+++ b/caravel/jinja_templates/options.html
@@ -34,17 +34,8 @@
                 {% elif type == "range" %}
                     <div class="col-2 col-slider">
                         <input type="{{ type }}" {{ opts[i] }} name="{{ names[i] }}" oninput="show_value(this.name,this.value)">
-                        {% set default = "None" %}
-                        {% set list = opts[i].split(' ') %}
-                        {% if list|length > 1 %}
-                            {% if list[2].startswith("val") %}
-                                {% set value = list[2].split('=') %}
-                                {% if value|length > 1 %}
-                                    {% set default = value|last %}
-                                {% endif %}   
-                            {% endif %}     
-                        {% endif %}
-                        <button id="{{ names[i] }}" class="disp-value" disabled>{{ default }}</button>
+                        {% set input = opts[i] %}
+                        <button id="{{ names[i] }}" class="disp-value" disabled>{{ input|gdsv }}</button>
                     </div>
                 {% else %}
                     <div class="col-auto">
