--- a/caravel/jinja_templates/process.html
+++ b/caravel/jinja_templates/process.html
@@ -19,6 +19,7 @@
         $('#activate_btn').html('ACTIVATE');
       });
       document.getElementById("deactivate_btn").disabled = false;
+      render_options();
     });
   });
 </script>
@@ -36,6 +37,7 @@
         $('#deactivate_btn').html('DEACTIVATE');
       });
       document.getElementById("deactivate_btn").disabled = true;
+      render_options();
     });
   });
 </script>
