add comp env settings to idx page, addresses #114

--- a/caravel/jinja_templates/index.html
+++ b/caravel/jinja_templates/index.html
@@ -49,6 +49,9 @@
 	</div>
 {% endif %}
 <div class="divider-vertical">
+	<a href="/set_comp_env"><button class="btn btn-outline-dark">COMPUTING ENV SETTINGS <i class="fa fa-cog"></i></button></a>
+</div>
+<div class="divider-vertical">
 {% if command_btn is not none %}
 	{% if command_btn|length > 1 %}
 		<select name="command" class="custom-select" style="width:auto;">
