tweak error style, add const

--- a/caravel/jinja_templates/error.html
+++ b/caravel/jinja_templates/error.html
@@ -1,7 +1,7 @@
 {% extends "template.html" %}
 {% block title %}Error{% endblock %}
 {% block content %}
-<h2>Caravel server encountered exception(s):</h2>
+<h2><code>caravel</code> server encountered exception(s):</h2>
 <div class="divider-15">
 	<ul class="list-group" style="display:inline-block">
 	  {% for ei in e %}
