--- a/caravel/jinja_templates/execute.html
+++ b/caravel/jinja_templates/execute.html
@@ -25,4 +25,5 @@
 <div id="result" class="divider-vertical"><b>Parsing the log file</b> <i class="fa fa-spinner fa-pulse fa-fw"></i></div>
 <div class="divider-vertical"></div>
 {% include 'back_referrer.html' %}
+{% include 'top_referrer.html' %}
 {% endblock %}
