update link to the new format

--- a/caravel/jinja_templates/footer.html
+++ b/caravel/jinja_templates/footer.html
@@ -24,7 +24,7 @@
 				</table>
 			</div>
 			<div class="center_footer">
-				<a href="http://code.databio.org/caravel/" target="_blank">Docs <i class="fa fa-book"></i></a>
+				<a href="http://caravel.databio.org/" target="_blank">Docs <i class="fa fa-book"></i></a>
 				<p>session created by: <code>{{ login }}</code></p>
 			</div>
 			<div class="right_footer">
