--- a/caravel/jinja_templates/footer.html
+++ b/caravel/jinja_templates/footer.html
@@ -11,13 +11,13 @@
 					<tbody>
 						<tr>
 							<td scope="row" class="footer">
-								<a href="https://github.com/pepkit/caravel" target="_new">{% include "logo_caravel_icon.html" %}</a> <code class="footer">{{caravel_version}}</code>
+								<a href="http://caravel.databio.org" target="_new">{% include "logo_caravel_icon.html" %}</a> <code class="footer">{{caravel_version}}</code>
 							</td>
 							<td scope="row" class="footer">
-								<a href="https://github.com/pepkit/looper" target="_new">{% include "logo_looper.html" %}</a> <code class="footer">{{looper_version}}</code>
+								<a href="http://looper.databio.org" target="_new">{% include "logo_looper.html" %}</a> <code class="footer">{{looper_version}}</code>
 							</td>
 							<td scope="row" class="footer">
-								<a href="https://www.python.org/" target="_new">{% include "logo_python.html" %}</a> <code class="footer">{{python_version}}</code>
+								<a href="https://www.python.org" target="_new">{% include "logo_python.html" %}</a> <code class="footer">{{python_version}}</code>
 							</td>
 						</tr>
 					</tbody>
